// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating Thumbs renders default Stars 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="text-[1rem] [&+&]:mt-4"
          data-field-has-error="false"
        >
          <div
            class=""
            id="stars"
            type="number"
          >
            <label
              class="mr-[.125rem] cursor-pointer"
              for="stars-1"
            >
              <span>
                <svg
                  class="PicassoSvgStar16-root transition-all duration-350 ease-out hover:scale-150 PicassoSvgStar16-yellow"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8 11.5-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581L8 11.5Zm0-1.13 2.786 1.465-.532-3.103 2.254-2.197-3.115-.453L8 3.26 6.607 6.082l-3.115.453 2.254 2.197-.532 3.103L8 10.37Z"
                  />
                </svg>
              </span>
              <input
                class="hidden"
                data-testid="stars-1"
                id="stars-1"
                name="stars"
                type="radio"
                value="1"
              />
            </label>
            <label
              class="mr-[.125rem] cursor-pointer"
              for="stars-2"
            >
              <span>
                <svg
                  class="PicassoSvgStar16-root transition-all duration-350 ease-out hover:scale-150 PicassoSvgStar16-yellow"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8 11.5-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581L8 11.5Zm0-1.13 2.786 1.465-.532-3.103 2.254-2.197-3.115-.453L8 3.26 6.607 6.082l-3.115.453 2.254 2.197-.532 3.103L8 10.37Z"
                  />
                </svg>
              </span>
              <input
                class="hidden"
                data-testid="stars-2"
                id="stars-2"
                name="stars"
                type="radio"
                value="2"
              />
            </label>
            <label
              class="mr-[.125rem] cursor-pointer"
              for="stars-3"
            >
              <span>
                <svg
                  class="PicassoSvgStar16-root transition-all duration-350 ease-out hover:scale-150 PicassoSvgStar16-yellow"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8 11.5-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581L8 11.5Zm0-1.13 2.786 1.465-.532-3.103 2.254-2.197-3.115-.453L8 3.26 6.607 6.082l-3.115.453 2.254 2.197-.532 3.103L8 10.37Z"
                  />
                </svg>
              </span>
              <input
                class="hidden"
                data-testid="stars-3"
                id="stars-3"
                name="stars"
                type="radio"
                value="3"
              />
            </label>
            <label
              class="mr-[.125rem] cursor-pointer"
              for="stars-4"
            >
              <span>
                <svg
                  class="PicassoSvgStar16-root transition-all duration-350 ease-out hover:scale-150 PicassoSvgStar16-yellow"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8 11.5-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581L8 11.5Zm0-1.13 2.786 1.465-.532-3.103 2.254-2.197-3.115-.453L8 3.26 6.607 6.082l-3.115.453 2.254 2.197-.532 3.103L8 10.37Z"
                  />
                </svg>
              </span>
              <input
                class="hidden"
                data-testid="stars-4"
                id="stars-4"
                name="stars"
                type="radio"
                value="4"
              />
            </label>
            <label
              class="mr-[.125rem] cursor-pointer"
              for="stars-5"
            >
              <span>
                <svg
                  class="PicassoSvgStar16-root transition-all duration-350 ease-out hover:scale-150 PicassoSvgStar16-yellow"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8 11.5-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581L8 11.5Zm0-1.13 2.786 1.465-.532-3.103 2.254-2.197-3.115-.453L8 3.26 6.607 6.082l-3.115.453 2.254 2.197-.532 3.103L8 10.37Z"
                  />
                </svg>
              </span>
              <input
                class="hidden"
                data-testid="stars-5"
                id="stars-5"
                name="stars"
                type="radio"
                value="5"
              />
            </label>
            <input
              class="hidden"
              id="stars-reset"
              name="stars"
              type="radio"
              value=""
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Rating Thumbs renders default Thumbs 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="text-[1rem] [&+&]:mt-4"
          data-field-has-error="false"
        >
          <div
            class=""
          >
            <label
              class="[&:not(:last-child)]:mr-[1em]"
              for="0-posititve"
            >
              <svg
                class="PicassoSvgThumbsUp16-root transition-colors duration-200 ease-linear cursor-pointer hover:text-graphite text-gray"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.778.26 9.5.5a1.707 1.707 0 0 1 1.117 2.034l-.642 2.56 1.762-.319a3 3 0 0 1 3.488 3.488l-.628 3.453A4 4 0 0 1 10.662 15H9c-1.664 0-3.33-.333-5-1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h2.45L7.593.712A1 1 0 0 1 8.778.259Zm-.316.948-.01.015L5.02 7 5 6.999v6.307c1.341.464 2.673.695 4 .694h1.662a3 3 0 0 0 2.951-2.463l.628-3.452a2 2 0 0 0-2.326-2.326l-3.287.596.377-1.503.641-2.56a.707.707 0 0 0-.462-.843l-.722-.241ZM4 13V6.999L2 7v6h2Z"
                />
              </svg>
              <input
                class="hidden"
                data-testid="positive-thumb"
                id="0-posititve"
                name="thumbs"
                type="radio"
                value="positive"
              />
            </label>
            <label
              class="[&:not(:last-child)]:mr-[1em]"
              for="0-negative"
            >
              <svg
                class="PicassoSvgThumbsDown16-root transition-colors duration-200 ease-linear cursor-pointer hover:text-graphite text-gray"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M7.003 1c1.664 0 3.33.333 5 1h2a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1h-2.45L8.41 15.288a1 1 0 0 1-1.185.453l-.722-.241a1.707 1.707 0 0 1-1.116-2.034l.641-2.56-1.761.319A3 3 0 0 1 .778 7.737l.628-3.453A4 4 0 0 1 5.342 1h1.661ZM12 9h2.003V3H12L12 9ZM7.003 2H5.342A3 3 0 0 0 2.39 4.463l-.628 3.452a2 2 0 0 0 2.326 2.326l3.287-.596-.377 1.503-.641 2.56a.707.707 0 0 0 .462.843l.723.241.008-.015L10.984 9H11V2.693A12.144 12.144 0 0 0 7.003 2Z"
                />
              </svg>
              <input
                class="hidden"
                data-testid="negative-thumb"
                id="0-negative"
                name="thumbs"
                type="radio"
                value="negative"
              />
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
